--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,8 @@
 
     <link rel="stylesheet" type="text/css" href="/media/css/jquery-ui.css" />
 
-{% block custom_css %}
-    <link rel="stylesheet" type="text/css" href="/media/css/global.css" />
-{% endblock %}
+<link rel="stylesheet" type="text/css" href="/media/css/base.css" />
+{% block custom_css %}{% endblock %}
 
 
   </head>
