--- a/templates/flows.html
+++ b/templates/flows.html
@@ -6,6 +6,10 @@
 <script type="text/javascript" src="/media/js/flows2.js"></script>
 {% endblock %}
 
+{% block custom_css %}
+<link rel="stylesheet" type="text/css" href="/media/css/global.css" />
+{% endblock %}
+
 {% block body %}
 <body>
     <h3><a href="../">Home</a></h3>
