--- a/templates/focus.html
+++ b/templates/focus.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 
 {% block custom_js %}
+<script type="text/javascript" src="/media/js/peters_conf.js"></script>
 <script type="text/javascript" src="/media/js/geo.js"></script>
 <script type="text/javascript" src="/media/js/peters.js"></script>
+{% endblock %}
+
+{% block custom_css %}
+<link rel="stylesheet" type="text/css" href="/media/css/global.css" />
 {% endblock %}
 
 {% block body %}
