modifications to coropleth map, added css alternative layout.

--- a/templates/choropleth.html
+++ b/templates/choropleth.html
@@ -13,6 +13,15 @@
 
 {% block body %}
 <body>
-    <h3><a href="../">Home</a></h3>
+    <div id="main_container">
+        <div id="nav_container" class="hr">
+            <h3><a href="../">Home</a></h3>
+        </div>
+        <div id="svg_container" class="hr">
+            <div id="context_container"></div>
+            <div id="map_container"></div>
+        </div>
+    
+    </div>
 </body>
 {% endblock %}
