--- a/media/css/choropleth.css
+++ b/media/css/choropleth.css
@@ -1,3 +1,51 @@
+#main_container {
+    width: 100%;
+    display: -moz-box;
+    display: -webkit-box;
+    display: box;
+    box-align: stretch;
+    -moz-box-orient: vertical;
+    -webkit-box-orient: vertical;
+    box-orient: vertical;
+    
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: #3E6F4D;
+}
+
+#nav_container {
+    width: 100%;
+    height: 25px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: #3E6F4D;
+}
+
+#context_container {
+    width: 200px;
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-right-color: #3E6F4D;
+}
+
+#svg_container {
+    width: 100%;
+    display: -moz-box;
+    display: -webkit-box;
+    display: box;
+    box-align: stretch;
+    -moz-box-orient: horizontal;
+    -webkit-box-orient: horizontal;
+    box-orient: horizontal;
+}
+
+
+#map_container { 
+    -moz-box-flex: 1; 
+    -webkit-box-flex: 1; 
+    -moz-box-flex: 1; 
+}
+
 
 .geo {
   margin-top: 10px;
